testsuite/tests/saks/should_fail/saks_fail007.hs
{-# LANGUAGE StandaloneKindSignatures #-}

module SAKS_Fail007 where

import Data.Kind (Type)

type May a :: Type
data May a = Nay | Yay a
