testsuite/tests/saks/should_fail/saks_fail007.stderr

saks_fail007.hs:7:6: error:
    Invalid left-hand side in a standalone kind signature: May a
